--- a/4-simple-model.tex
+++ b/4-simple-model.tex
@@ -1,1 +1,16 @@
-Simple
+For the sake of this demonstration, we have created a subset of the original data provided by the Amon Carter Museum of American Art that describes the artists behind the works the museum curates.  In Karma, we will 
+
+
+
+\begin{figure*}
+\begin{center}
+\includegraphics[width=4.0in]{4-simple-model.png}
+\vspace{-3mm}
+\caption{A simple model for describing an artist as an E21\_Person in the ACMAA dataset}
+\vspace{-2mm}
+\label{fig:simple-model-screenshot}
+\end{center}
+\vspace{-1.5em}
+\end{figure*}
+
+
