--- a/augment.tex
+++ b/augment.tex
@@ -44,7 +44,7 @@ Information Sciences Institute and Department of Computer Science, USA\\
 \begin{abstract}
 As users across the world transform legacy datasets in the form of relational databases and structured documents into RDF for the Linked Data Cloud, it can be difficult for them to understand how the data from one source relates to others'.
 Lacking such an understanding precludes users from making the most of the relationships they are capturing. 
-By building on our previously demonstrated ability to enable museum curators to semantically model their data about artists, artworks and subjects to generate RDF, we can exploit such models to allow curators to reason about how other models might integrate with their data.  
+By building on our previously demonstrated ability to enable museum curators to semantically model their data about cultural artifacts, subjects and creators to generate RDF, we can exploit such models to allow curators to reason about how other models might integrate with their data.  
 Curators can then decide how to augment their data with linked data derived from other museums' sources.
 This enables users to not just quickly interrogate their linked data interactively but also develop data flows that can embed linked data from many sources in a larger pipeline. In this demonstration, we show how a curator can quickly model artist data from a new museum using a common cultural heritage ontology, discover biographical data published as RDF from another museum using the same modelling process, and then augment the new museum's artist records with it.  
 \end{abstract}
@@ -58,7 +58,7 @@ This enables users to not just quickly interrogate their linked data interactive
 \subsubsection*{Model Management} 
 \input{3-model-manager}
 
-\subsubsection*{Introduction} 
+\subsubsection*{Modelling a New Source} 
 \input{4-simple-model}
 
 \subsubsection*{Searching for Data to Augment} 
