--- a/refs.bib
+++ b/refs.bib
@@ -10,6 +10,26 @@
   year = 2013
 }
 
+@inproceedings{ knoblock12:eswc,
+  urlpresentation = {http://www.isi.edu/integration/slides/knoblock12-eswc-slides.pdf},
+  title = {Semi-Automatically Mapping Structured Sources into the Semantic Web},
+  booktitle = {Proceedings of the Extended Semantic Web Conference},
+  author = {Craig A. Knoblock and Pedro Szekely and Jose Luis Ambite and Shubham Gupta and Aman Goel and Maria Muslea and Kristina Lerman and Mohsen Taheriyan and Parag Mallick},
+  year = {2012},
+  address = {Crete, Greece},
+  keywords = {"Source Modeling"},
+  urlpaper = {http://www.isi.edu/integration/papers/knoblock12-eswc.pdf},
+  urlyoutube = {http://www.youtube.com/watch?v=kUIqTI56oeQ&feature=share&list=PLdD4tO6i0DwMXmBhOwlt7zEZKoOWrWpOA]}
+}
+
+@inproceedings{ngomo2011limes,
+  title={LIMES: a time-efficient approach for large-scale link discovery on the web of data},
+  author={Ngomo, Axel-Cyrille Ngonga and Auer, S{\"o}ren},
+  booktitle={Proceedings of the Twenty-Second international joint conference on Artificial Intelligence-Volume Volume Three},
+  pages={2312--2317},
+  year={2011},
+  organization={AAAI Press}
+}
 
 @inproceedings{ Szekely:2013vq,
   title = {{Connecting the Smithsonian American Art Museum to the Linked Data Cloud}},
@@ -27,16 +47,4 @@
   urlpaper = {http://www.isi.edu/~szekely/contents/papers/2013/eswc-2013-saam.pdf},
   urlslideshare = {http://slidesha.re/18vxMnn},
   urlyoutube = {http://www.youtube.com/watch?v=1Vaytr09H1w&feature=share&list=PLdD4tO6i0DwMXmBhOwlt7zEZKoOWrWpOA}
-}
-
-@inproceedings{ knoblock12:eswc,
-  urlpresentation = {http://www.isi.edu/integration/slides/knoblock12-eswc-slides.pdf},
-  title = {Semi-Automatically Mapping Structured Sources into the Semantic Web},
-  booktitle = {Proceedings of the Extended Semantic Web Conference},
-  author = {Craig A. Knoblock and Pedro Szekely and Jose Luis Ambite and Shubham Gupta and Aman Goel and Maria Muslea and Kristina Lerman and Mohsen Taheriyan and Parag Mallick},
-  year = {2012},
-  address = {Crete, Greece},
-  keywords = {"Source Modeling"},
-  urlpaper = {http://www.isi.edu/integration/papers/knoblock12-eswc.pdf},
-  urlyoutube = {http://www.youtube.com/watch?v=kUIqTI56oeQ&feature=share&list=PLdD4tO6i0DwMXmBhOwlt7zEZKoOWrWpOA]}
 }
