--- a/4-simple-model.tex
+++ b/4-simple-model.tex
@@ -1,5 +1,9 @@
-For the sake of this demonstration, we have created a subset of the original data provided by the Amon Carter Museum of American Art that describes the artists behind the works the museum curates.  In Karma, we will 
-
+For the sake of this demonstration, we have created a subset of the original data provided by the Amon Carter Museum of American Art that describes the artists behind the works the museum curates.  
+To create a new source model for the ACMAA dataset in Karma, we first need to model the primary entity in the dataset, the artist.  To make the RDF for the dataset linkable, we need to create URIs for the artists.  
+We do this by providing a few lines of Python to define a URI template using other fields to create a new field containing a URI for each artist.  We then model the artist by adding an E21\_Person to the source model.  
+This creates a new node labelled E21\_Person1 and we set the URI of the node to the new field.  
+We also create a E41\_Appelation with a rdfs:label to capture the artist's name.  
+To supplement our new source model which is illustrated in Figure~\ref{fig:simple-model-screenshot} and faciliate the augmentation, we have also generated a set of owl:sameAs links between the ACMAA dataset and the data from the Smithsonian using LIMES and loaded the links into a triples store.  
 
 
 \begin{figure*}
