Updated title and authors

--- a/augment.tex
+++ b/augment.tex
@@ -1,5 +1,3 @@
-
-
 \documentclass[runningheads,a4paper]{llncs}
 
 \usepackage{amssymb}
@@ -17,17 +15,17 @@
 \mainmatter  % start of an individual contribution
 
 % first the title is needed
-\title{Augmenting Data Using Sources Models}
+\title{A Demonstration of Linked Data Source Discovery and Integration}
 
 % a short form should be given in case it is too long for the running head
-\titlerunning{Augmenting Data Using Sources Models}
+\titlerunning{A Demonstration of Linked Data Source Discovery and Integration}
 
 % the name(s) of the author(s) follow(s) next
 %
 \author{Jason Slepicka%
-\and Chengye Yin\and Pedro Szekely\and Craig Knoblock}
+\and Chengye Yin\and Pedro Szekely\and Craig A. Knoblock}
 %
-\authorrunning{Augmenting Data Using Sources Models}
+\authorrunning{Slepicka et al.}
 % (feature abused for this document to repeat the title also on left hand pages)
 
 % the affiliations are given next; don't give your e-mail address
