Added an introduction

--- a/1-introduction.tex
+++ b/1-introduction.tex
@@ -1,1 +1,7 @@
-Something
+As users begin to semantically model their data and publish it as RDF to the linked data cloud, they should be able to take advantage of their work and discover linked data, so they can integrate it into their own datasets.  
+For museum curators like those at the Amon Carter Museum of American Art, this means they could multiply their efforts by doing something as simple as filling in gaps like missing birth dates in their own data. 
+They could also use linked data to verify their own data and identify inconsistencies between it and another museum's like the Smithsonian.
+
+With the explosive growth in linked data lately, however, figuring out what data is actually available is difficult.
+Fortunately, as the community aligns on standard source modeling techniques like R2RML for generating RDF, it is possible to reason about the entities and relationships users are trying to capture in their source models, especially if users within a domain use the same ontologies and share their source models.
+By users sharing source models along with their data, we will demonstrate how users of Karma can discover such data and integrate it with their own.
