--- a/3-model-manager.tex
+++ b/3-model-manager.tex
@@ -6,7 +6,7 @@ When users want Karma to generate RDF from a future source, they can also apply 
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=4.0in]{3-model-manager.png}
+\includegraphics[width=4.0in]{images/3-model-manager.png}
 \vspace{-3mm}
 \caption{A list of source models a user has made available to Karma}
 \vspace{-2mm}
