--- a/4-simple-model.tex
+++ b/4-simple-model.tex
@@ -8,7 +8,7 @@ To supplement our new source model which is illustrated in Figure~\ref{fig:simpl
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=4.0in]{4-simple-model.png}
+\includegraphics[width=4.0in]{images/4-simple-model.png}
 \vspace{-3mm}
 \caption{A simple model for describing an artist as an E21\_Person in the ACMAA dataset}
 \vspace{-2mm}
