--- a/5-search.tex
+++ b/5-search.tex
@@ -15,7 +15,7 @@ Once Karma has identified the possible properties according to the models in the
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=4.0in]{5-search.png}
+\includegraphics[width=4.0in]{images/5-search.png}
 \vspace{-3mm}
 \caption{Suggested object and data properties from CIDOC CRM for the user to augment E21\_Person from ACMAA dataset with by using other source models}
 \vspace{-2mm}
