--- a/6-augment.tex
+++ b/6-augment.tex
@@ -3,5 +3,15 @@ It does so by generating SPARQL queries.
 Karma first generates a list of URIs from the current dataset to augment to anchor the queries.  
 To expand the search, the user also has the option of specifying an equivalence relationship like owl:sameAs or skos:exactMatch.  
 Karma then binds a set of predicates, and classes for object properties, as indicated by the user, and then executes the queries.  
-Karma finally merges the results in to the dataset and adds the appropriate links to the source model as illustrated in %Figure~\ref{fig:search-screenshot}
+Karma finally merges the results in to the dataset and adds the appropriate links to the source model as illustrated in Figure~\ref{fig:augment-screenshot}
 .  
+\begin{figure*}
+\begin{center}
+\includegraphics[width=4.0in]{images/6-augment.png}
+\vspace{-3mm}
+\caption{Suggested object and data properties from CIDOC CRM for the user to augment E21\_Person from ACMAA dataset with by using other source models}
+\vspace{-2mm}
+\label{fig:augment-screenshot}
+\end{center}
+\vspace{-1.5em}
+\end{figure*}
