--- a/0-iswc-demo-paper.tex
+++ b/0-iswc-demo-paper.tex
@@ -26,7 +26,7 @@
 \title{A Demonstration of Linked Data Source Discovery and Integration}
 
 % a short form should be given in case it is too long for the running head
-\titlerunning{A Demonstration of Linked Data Source Discovery and Integration}
+\titlerunning{A Demonstration of Linked Data Discovery and Integration}
 
 % the name(s) of the author(s) follow(s) next
 %
@@ -55,12 +55,17 @@ The Linked Data cloud is an enormous repository of data, but it is difficult for
 %  3. Startling sentence (what your solution achieves [SPJ])
 
 %  4. Implication of startling sentence (what follows from your solution [SPJ])
+Users can easily do it interactively.
 
 \comment{%
 As users across the world transform legacy datasets in the form of relational databases and structured documents into RDF for the Linked Data Cloud, it can be difficult for them to understand how the data from one source relates to others'.
+%
 Lacking such an understanding precludes users from making the most of the relationships they are capturing. 
+%
 By building on our previously demonstrated ability to enable museum curators to semantically model their data about cultural artifacts, subjects and creators to generate RDF, we can exploit such models to allow curators to reason about how other models might integrate with their data.  
+%
 Curators can then decide how to augment their data with linked data derived from other museums' sources.
+%
 This enables users to not just quickly interrogate their linked data interactively but also develop data flows that can embed linked data from many sources in a larger pipeline. In this demonstration, we show how a curator can quickly model artist data from a new museum using a common cultural heritage ontology, discover biographical data published as RDF from another museum using the same modelling process, and then augment the new museum's artist records with it.  
 }
 \end{abstract}
