0 - typos and changed section names 2 - initial cut 4 - moved limes to dataset section and changed caption 5 - changed caption 6 - updated predicates and changed caption refs - added CIDOC ref

--- a/0-iswc-demo-paper.tex
+++ b/0-iswc-demo-paper.tex
@@ -66,7 +66,7 @@ By building on our previously demonstrated ability to enable museum curators to 
 %
 Curators can then decide how to augment their data with linked data derived from other museums' sources.
 %
-This enables users to not just quickly interrogate their linked data interactively but also develop data flows that can embed linked data from many sources in a larger pipeline. In this demonstration, we show how a curator can quickly model artist data from a new museum using a common cultural heritage ontology, discover biographical data published as RDF from another museum using the same modelling process, and then augment the new museum's artist records with it.  
+This enables users to not just quickly interrogate their linked data interactively but also develop data flows that can embed linked data from many sources in a larger pipeline. In this demonstration, we show how a curator can quickly model artist data from a new museum using a common cultural heritage ontology, discover biographical data published as RDF from another museum using the same modeling process, and then augment the new museum's artist records with it.  
 }
 \end{abstract}
 
@@ -79,13 +79,13 @@ This enables users to not just quickly interrogate their linked data interactive
 \subsubsection*{Model Management} 
 \input{3-model-manager}
 
-\subsubsection*{Modelling a New Source} 
+\subsubsection*{Modeling a New Source} 
 \input{4-simple-model}
 
-\subsubsection*{Searching for Data to Augment} 
+\subsubsection*{Discovering Data Sources} 
 \input{5-search}
 
-\subsubsection*{Augmenting Dataset} 
+\subsubsection*{Integrating Data Sources} 
 \input{6-augment}
 
 \bibliographystyle{plain}
