--- a/5-search.tex
+++ b/5-search.tex
@@ -17,7 +17,7 @@ Once Karma has identified the possible properties according to the models in the
 \begin{center}
 \includegraphics[width=4.9in]{images/5-search.png}
 \vspace{-3mm}
-\caption{Suggested object and data properties from CIDOC CRM for the user to augment E21\_Person from ACMAA dataset with by using other source models}
+\caption{CIDOC CRM object and data properties discovered from other sources for the user to augment E21\_Person}
 \vspace{-2mm}
 \label{fig:search-screenshot}
 \end{center}
