--- a/refs.bib
+++ b/refs.bib
@@ -10,6 +10,24 @@
   year = 2013
 }
 
+@article{Doerr:2003:CCR:958671.958678,
+ author = {Doerr, Martin},
+ title = {The CIDOC Conceptual Reference Module: An Ontological Approach to Semantic Interoperability of Metadata},
+ journal = {AI Mag.},
+ issue_date = {September 2003},
+ volume = {24},
+ number = {3},
+ month = sep,
+ year = {2003},
+ issn = {0738-4602},
+ pages = {75--92},
+ numpages = {18},
+ url = {http://dl.acm.org/citation.cfm?id=958671.958678},
+ acmid = {958678},
+ publisher = {American Association for Artificial Intelligence},
+ address = {Menlo Park, CA, USA},
+} 
+
 @inproceedings{ knoblock12:eswc,
   urlpresentation = {http://www.isi.edu/integration/slides/knoblock12-eswc-slides.pdf},
   title = {Semi-Automatically Mapping Structured Sources into the Semantic Web},
