--- a/0-iswc-demo-paper.tex
+++ b/0-iswc-demo-paper.tex
@@ -12,6 +12,8 @@
 \newcommand{\todo}[1]{\textbf{\textcolor{red}{[[#1]]}}}
 
 \newcommand{\karma}{\textsc{Karma}\xspace}
+\newcommand{\eg}{e.g.,\xspace}
+\newcommand{\ie}{i.e.,\xspace}
 
 \urldef{\mailsa}\path|{knoblock, pszekely, slepicka}@isi.edu|
 \urldef{\mailsb}\path|{chengyey}@usc.edu|    
