--- a/1-introduction.tex
+++ b/1-introduction.tex
@@ -1,7 +1,22 @@
-As users begin to semantically model their data and publish it as RDF to the linked data cloud, they should be able to take advantage of their work and discover linked data, so they can integrate it into their own datasets.  
-For museum curators like those at the Amon Carter Museum of American Art, this means they could multiply their efforts by doing something as simple as filling in gaps like missing birth dates in their own data. 
-They could also use linked data to verify their own data and identify inconsistencies between it and another museum's like the Smithsonian. \cite{knoblock12:eswc}
+% Problem and motivating example
+The Linked Data cloud contains an enormous wealth of data about a large variety of topics.
+Consider museums, which often have detailed data about the artworks in their collection, but may only have sparse data about the artists who created them.
+For example, museums typically have basic tombstone data about artists (name, birth/death years and places), but may lack detailed biographies, influence relationships, places and dates where the artists were active, etc.
+In this example, we would like to enable museum users to find additional information about their artists in the Link Data cloud and to enable them to easily integrate these additional data with their datasets to produce a richer, more complete dataset.
 
-With the explosive growth in linked data lately, however, figuring out what data is actually available is difficult.
-Fortunately, as the community aligns on standard source modeling techniques like R2RML for generating RDF, it is possible to reason about the entities and relationships users are trying to capture in their source models, especially if users within a domain use the same ontologies and share their source models.
-By users sharing source models along with their data, we will demonstrate how users of Karma can discover such data and integrate it with their own.
+Our approach, implemented as a new capability in our \karma data integration system~\cite{knoblock12:eswc} leverages R2RML mappings \todo{CITE R2RML} to accurately describe the contents of the user's datasets and the contents of datasets in the Linked Data cloud.
+We envision a world where datasets in the Linked Data cloud include richer descriptions of their content than what is available today.
+Today, datasets include, at best, a VoID description\footnote{\url{http://www.w3.org/TR/void/}} that expresses basic metadata such as access method, URI patterns and vocabularies used.
+We propose augmenting this metadata with R2RML mappings, which contain significantly richer descriptions about each subject and its properties.
+Even though the R2RML standard was defined to specify mappings from relational databases to RDF recent work \todo{cite RML} has proposed extensions to specify mappings from other types of data including CSV, JSON, XML and Web APIs.
+Consequently, it is reasonable to expect that many more datasets in the Linked Data cloud could be published with R2RML-style descriptions.
+
+In this demonstration we show how museum users can use \karma to quickly define an R2RML mapping of a dataset (our previous work) and how they can use the R2RML mapping to find additional information about the artists in their dataset, and how they can very simply augment their dataset with the additional information (our new work).
+
+%As users begin to semantically model their data and publish it as RDF to the linked data cloud, they should be able to take advantage of their work and discover linked data, so they can integrate it into their own datasets.  
+%For museum curators like those at the Amon Carter Museum of American Art, this means they could multiply their efforts by doing something as simple as filling in gaps like missing birth dates in their own data. 
+%They could also use linked data to verify their own data and identify inconsistencies between it and another museum's like the Smithsonian. 
+%
+%With the explosive growth in linked data lately, however, figuring out what data is actually available is difficult.
+%Fortunately, as the community aligns on standard source modeling techniques like R2RML for generating RDF, it is possible to reason about the entities and relationships users are trying to capture in their source models, especially if users within a domain use the same ontologies and share their source models.
+%By users sharing source models along with their data, we will demonstrate how users of Karma can discover such data and integrate it with their own.
