--- a/2-dataset.tex
+++ b/2-dataset.tex
@@ -1,7 +1,23 @@
-One museum who has used Karma for both modeling their data and generating RDF is the Smithsonian American Art Museum \cite{Szekely:2013vq}. 
-The model process for their source data required mapping 14 tables and views from their content management system which was backed by a relational database.
-For the mapping, the Smithsonian relied on the CIDOC CRM ontology \cite{Doerr:2003:CCR:958671.958678}.
+\begin{enumerate}
+\item CSV file from a museum, containing 2500 records of artworks by 200 \todo{exact number?} artists.
 
-For this demonstration, we will use a CSV file containing approximately 200 artists extracted from 2500 records of artworks held at another museum.
-We will show how a user can interactively develop a source model for this new dataset, discover what the Smithsonian has generated in relation to the user's new source model, and then integrate the Smithsonian's data into their own.  
-To facilitate the discovery and integration, we have also generated a set of owl:sameAs links between the artists in the new dataset and the artists from the Smithsonian dataset using LIMES \cite{ngomo2011limes}.
+\item Linked Data created from the Smithsonian American Art Museum (SAAM) content management system including over 40,000 artworks and 8,000 artists. 
+The Linked Data is accessible on a \sparql endpoint.
+In previous work~\todo{cite SAAM paper, saam-lod github} we mapped the SAAM dataset to the CIDOC CRM ontology~\cite{Doerr:2003:CCR:958671.958678}, producing a collection of \rtworml mapping files for 14 tables in the SAAM collection management system.
+In the demonstration, we are using the SAAM LOD as a proxy for the Linked Data cloud to illustrate the vision of a Linked Data cloud populated with \rtworml models.
+
+\item \rtworml repository containing \rtworml mappings downloaded from the Web and stored in a triple store accessible on a \sparql endpoint (separate from the Linked Data endpoint).
+\karma provides a model manager component to manage the \rtworml repository (Fig~\ref{fig:model-manager-screenshot}).
+\end{enumerate}
+%
+
+\begin{figure*}[bth]
+\begin{center}
+\includegraphics[width=4.8in]{images/3-model-manager.png}
+\vspace{-3mm}
+\caption{Screenshot of the model manager, showing the \rtworml mappings fetched from the GitHub repository where we shared the mappings for the SAAM dataset \todo{Screenshot should show URLs to GitHub rather than localhost}}
+\vspace{-2mm}
+\label{fig:model-manager-screenshot}
+\end{center}
+\vspace{-1.5em}
+\end{figure*}
