--- a/4-simple-model.tex
+++ b/4-simple-model.tex
@@ -18,3 +18,6 @@ The new source model is illustrated in Figure~\ref{fig:simple-model-screenshot}.
 \end{figure*}
 
 
+
+
+To facilitate the discovery and integration, we have also generated a set of owl:sameAs links between the artists in the new dataset and the artists from the Smithsonian dataset using LIMES \cite{ngomo2011limes}.
