Added citation for R2RML

--- a/refs.bib
+++ b/refs.bib
@@ -49,6 +49,17 @@
   organization={AAAI Press}
 }
 
+@TechReport{Sundara:12:RRR,
+  author      = "Seema Sundara and Richard Cyganiak and Souripriya Das",
+  title       = "{R2RML}: {RDB} to {RDF} Mapping Language",
+  month       = sep,
+  note        = "http://www.w3.org/TR/2012/REC-r2rml-20120927/",
+  year        = "2012",
+  bibsource   = "http://w2.syronex.com/jmr/w3c-biblio",
+  type        = "{W3C} Recommendation",
+  institution = "W3C",
+}
+
 @inproceedings{ Szekely:2013vq,
   title = {{Connecting the Smithsonian American Art Museum to the Linked Data Cloud}},
   booktitle = {Proceedings of the 10th Extended Semantic Web Conference},
@@ -66,3 +77,4 @@
   urlslideshare = {http://slidesha.re/18vxMnn},
   urlyoutube = {http://www.youtube.com/watch?v=1Vaytr09H1w&feature=share&list=PLdD4tO6i0DwMXmBhOwlt7zEZKoOWrWpOA}
 }
+
