--- a/1-introduction.tex
+++ b/1-introduction.tex
@@ -4,7 +4,7 @@ Consider museums, which often have detailed data about the artworks in their col
 For example, museums typically have basic tombstone data about artists (name, birth/death years and places), but may lack detailed biographies, influence relationships, places and dates where the artists were active, etc.
 In this example, we would like to enable museum users to find additional information about their artists in the Link Data cloud and to enable them to easily integrate these additional data with their datasets to produce a richer, more complete dataset.
 
-Our approach, implemented as a new capability in our \karma data integration system~\cite{knoblock12:eswc} leverages \rtworml mappings \todo{CITE R2RML} to accurately describe the contents of the user's datasets and the contents of datasets in the Linked Data cloud.
+Our approach, implemented as a new capability in our \karma data integration system~\cite{knoblock12:eswc} leverages \rtworml mappings ~\cite{Sundara:12:RRR} to accurately describe the contents of the user's datasets and the contents of datasets in the Linked Data cloud.
 We envision a world where datasets in the Linked Data cloud include richer descriptions of their content than what is available today.
 Today, datasets include, at best, a VoID description\footnote{\url{http://www.w3.org/TR/void/}} that expresses basic metadata such as access method, URI patterns and vocabularies used.
 We propose augmenting this metadata with \rtworml mappings, which contain significantly richer descriptions about each subject and its properties.
