Updated model manager to show git hub links

--- a/2-dataset.tex
+++ b/2-dataset.tex
@@ -15,7 +15,7 @@ In the demonstration, we are using the SAAM LOD as a proxy for the Linked Data c
 \begin{center}
 \includegraphics[width=4.8in]{images/3-model-manager.png}
 \vspace{-3mm}
-\caption{Screenshot of the model manager, showing the \rtworml mappings fetched from the GitHub repository where we shared the mappings for the SAAM dataset \todo{Screenshot should show URLs to GitHub rather than localhost}}
+\caption{Screenshot of the model manager, showing the \rtworml mappings fetched from the GitHub repository where we shared the mappings for the SAAM dataset}
 \vspace{-2mm}
 \label{fig:model-manager-screenshot}
 \end{center}
