Trimmed down model, discover, and integrate

--- a/1-introduction.tex
+++ b/1-introduction.tex
@@ -2,7 +2,7 @@
 The Linked Data cloud contains an enormous wealth of data about a large variety of topics.
 Consider museums, which often have detailed data about the artworks in their collection, but may only have sparse data about the artists who created them.
 For example, museums typically have basic tombstone data about artists (name, birth/death years and places), but may lack detailed biographies, influence relationships, places and dates where the artists were active, etc.
-In this example, we would like to enable museum users to find additional information about their artists in the Link Data cloud and to enable them to easily integrate these additional data with their datasets to produce a richer, more complete dataset.
+In this example, we would like to enable museum users to find additional information about their artists in the Linked Data cloud and to enable them to easily integrate these additional data with their datasets to produce a richer, more complete dataset.
 
 Our approach, implemented as a new capability in our \karma data integration system~\cite{knoblock12:eswc} leverages \rtworml mappings~\cite{Sundara:12:RRR} to accurately describe the contents of the user's datasets and the contents of datasets in the Linked Data cloud.
 We envision a world where datasets in the Linked Data cloud include richer descriptions of their content than what is available today.
