--- a/2-dataset.tex
+++ b/2-dataset.tex
@@ -1,5 +1,5 @@
 \begin{enumerate}
-\item CSV file from a museum, containing 2433 records of artworks by 197 artists.
+\item CSV file from a museum, containing 197 artists. %containing 2433 records of artworks by 
 
 \item Linked Data created from the Smithsonian American Art Museum (SAAM) content management system including over 40,000 artworks and 8,000 artists. 
 The Linked Data is accessible on a \sparql endpoint.
@@ -8,9 +8,10 @@ In the demonstration, we are using the SAAM LOD as a proxy for the Linked Data c
 
 \item \rtworml repository containing \rtworml mappings downloaded from the Web and stored in a triple store accessible on a \sparql endpoint (separate from the Linked Data endpoint).
 \karma provides a model manager component to manage the \rtworml repository (Fig~\ref{fig:model-manager-screenshot}).
-\end{enumerate}
-%
 
+\item owl:sameAs links between the artists in the first dataset and the artists from the Smithsonian dataset generated using LIMES \cite{ngomo2011limes}.
+
+\end{enumerate}
 \begin{figure*}[bth]
 \begin{center}
 \includegraphics[width=4.8in]{images/3-model-manager.png}
