--- a/4-simple-model.tex
+++ b/4-simple-model.tex
@@ -1,6 +1,6 @@
-We begin by using Karma's existing capability to create a source model, illustrated in Figure~\ref{fig:simple-model-screenshot}, using the CIDOC CRM ontology for the first CSV file.  
-Karma can then translate this model into an R2RML mapping.
-From this R2RML mapping, Karma can then compare it to the other mappings loaded in the Model Manager to discover new ways to integrate data.
+We begin by using Karma's existing capability to capture the artists in the first CSV file as crm:E21\_Person from the CIDOC CRM ontology in a source model shown in Figure~\ref{fig:simple-model-screenshot}.  
+Karma can translate this model into an R2RML mapping.
+Karma can then compare it to the other mappings loaded in the Model Manager to discover new ways to integrate data.
 
 
 \begin{figure*}
