--- a/6-augment.tex
+++ b/6-augment.tex
@@ -1,4 +1,4 @@
-Once the user has selected properties to augment their data with, e.g. the artist's biography (for completeness) and the birth (for validation), Karma searches for the matching triples.
+Karma takes the user's selected properties, e.g. the artist's biography (for completeness) and birth (for validation), and searches for matching triples.
 Karma then merges the results and updates the source model appropriately as illustrated in Figure~\ref{fig:augment-screenshot}, so the user can continue to explore the integrated data interactively. 
 
 \begin{figure*}
